--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -13,7 +13,7 @@
 <div>
     <div id="blog" style="display:none"><%= id %></div>
     <div class="topbar-container">
-        <a href="/" class="logo"><img src="img/logo.png" style="height: 60px;float: left"></a>
+        <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
         <a href="/blogs?tag=<%= tag %>"><div class="btn-list">文章</div></a>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new">+</div></a>
