--- a/views/blogs/list.ejs
+++ b/views/blogs/list.ejs
@@ -13,7 +13,7 @@
 <div>
     <div id="cur-tag-id" style="display: none"><%= curTag %></div>
     <div class="topbar-container">
-        <a href="/" class="logo"><img src="img/logo.png" style="height: 60px;float: left"></a>
+        <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left;border: 0"></a>
         <div class="btn-list">文章</div>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new">+</div></a>
