--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -13,13 +13,16 @@
 <div>
     <div class="topbar-container">
         <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left;border: 0"></a>
-        <div class="btn-list">文章</div>
+        <div style="float:left;font-weight: bold;font-size: 25px;line-height: 25px;margin-top: 35px;margin-left: 20px">后台管理</div>
         <a href="/blogs/publish"><div class="btn-new">+</div></a>
         <div class="clearFloat"></div>
     </div>
+    <div class="seperator">数据库</div>
+    <div>
+        <input type="button" value="上传数据库" class="btn upload">
+        <input type="button" value="下载数据库" class="btn download">
+    </div>
     <div class="tip"></div>
-    <div><input type="button" value="上传数据库" class="btn upload"></div>
-    <div><input type="button" value="下载数据库" class="btn download"></div>
 </div>
 
 </div>
