--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -11,6 +11,11 @@
 </head>
 <body>
 <div>
+    <div class="topbar-container">
+        <a href="/" ><img src="/img/logo.png" class="logo" ></a>
+        <div style="float:left;font-weight: bold;font-size: 25px;line-height: 25px;margin-top: 30px;margin-left: 20px">后台管理</div>
+        <div class="clearFloat"></div>
+    </div>
     <form class="form-login" method="post" action="/">
         <input type="text"class="form-input user" placeholder="管理员名称" value="管理员名称">
         <div class="line"></div>
