--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -60,7 +60,11 @@
         display: none;
     }
     .dialog-bg{
-        position: fixed;background:black;opacity:0.5;top: 0;left: 0;width: 100%;height: 100%;
+        filter: alpha(opacity=50);
+        -moz-opacity:0.5;
+        opacity: 0.5;
+        position: fixed;background:black;
+        top: 0;left: 0;width: 100%;height: 100%;
     }
     .dialog-container{
         position: fixed;background:transparent;top: 0;left: 0;width: 100%;height: 100%;
@@ -76,7 +80,11 @@
         display: table;line-height: 40px
     }
     .dialog-btn{
-        background: cornflowerblue;width: 150px;height: 40px;display: inline-table;font-size: 20px;
+        float: left;
+        background: cornflowerblue;
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
     }
     .dialog-btn:hover{
         background: deepskyblue;
