--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -21,9 +21,9 @@
         <a href="/">
             <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
         </a>
-        <a href="/blogs">
+       <!-- <a href="/blogs">
             <div class="btn-list">文章</div>
-        </a>
+        </a>-->
         <% if(!isEdit){ %>
         <div class="btn-new">新建</div>
         <% }else{ %>
