--- a/public/css/index.css
+++ b/public/css/index.css
@@ -196,4 +196,9 @@ a{
     .btn-new{
         margin-right: 10px;
     }
+    .name{
+        font-size: 35px;
+        text-align: center;
+        margin-left: 10px;
+    }
 }
