--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -30,7 +30,14 @@ a{
 .clearFloat{
     clear: both;
 }
-
+.name {
+    float: left;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 25px;
+    margin-top: 30px;
+    margin-left: 30px
+}
 .topbar-container{
     width: 100%;
     background: #eee;
@@ -133,6 +140,15 @@ a{
 
 
 
-@media (max-width: 800px) {
 
+@media(max-width: 800px){
+    .logo{
+        margin-left: 10px
+    }
+    .name{
+        margin-left: 10px;
+    }
+    .btn-new{
+        margin-right: 10px;
+    }
 }
