--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -309,3 +309,15 @@ body {
     cursor: pointer;
     background: navajowhite;
 }
+
+@media(max-width: 800px){
+    .logo{
+        margin-left: 10px
+    }
+    .btn-list{
+        margin-left: 10px;
+    }
+    .btn-new{
+        margin-right: 10px;
+    }
+}
