--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    word-wrap: break-word;/*允许长单词换行到下一行：*/
+    word-wrap: break-word; /*允许长单词换行到下一行：*/
     /*word-break:break-all; /!*任意*!/*/
 }
 
@@ -17,58 +17,72 @@ body {
     font-size: 14px;
     font-family: "Microsoft YaHei", Verdana, sans-serif, "SimSun";
 }
-a{
+
+a {
     color: black;
     outline: none;
     text-decoration: none;
 }
 
-.clearFloat{
+.clearFloat {
     clear: both;
 }
 
-.topbar-container{
+.name {
+    float: left;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 25px;
+    margin-top: 30px;
+    margin-left: 30px
+}
+
+.topbar-container {
     width: 100%;
     background: #eee;
     border-bottom: 2px solid black;
     height: 60px;
 }
-.logo{
+
+.logo {
     float: left;
     height: 100%;
     margin-left: 20px;
     border: none;
 }
 
-.form-login{
+.form-login {
     margin: auto;
     margin-top: 150px;
-    display:table;
+    display: table;
     max-width: 300px;
     width: 100%;
 }
 
-.form-input{
+.form-input {
     display: block;
-    width:100%;
-    height:45px;
+    width: 100%;
+    height: 45px;
     border: none;
-    outline:none;
+    outline: none;
     padding: 5px;
     line-height: 45px;
     font-size: 16px;
     background: transparent;
-    color:#aaa;
+    color: #aaa;
 }
-.tip{
+
+.tip {
     padding: 5px;
     padding-top: 10px;
     color: red;
 }
-.passwd{
+
+.passwd {
     color: black;
 }
-.btn-login{
+
+.btn-login {
     margin-top: 5px;
     border: none;
     outline: none;
@@ -78,14 +92,23 @@ a{
     font-size: 18px;
     font-weight: bold;
 }
-.btn-login:hover{
+
+.btn-login:hover {
     background: deepskyblue;
 }
-.line{
+
+.line {
     width: 100%;
     height: 2px;
     background: #ddd;
 }
-@media (max-width: 800px) {
 
+@media (max-width: 800px) {
+    .logo {
+        margin-left: 10px
+    }
+
+    .name {
+        margin-left: 10px;
+    }
 }
