--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,15 +30,15 @@ a{
 .top-container{
     width: 100%;
     height: 100px;
+    border-bottom: 1px solid #ddd;
     /*background: url("/img/bg.jpg");*/
-    /*background:-moz-linear-gradient(top,#01203d,#93c5ea);/!*火狐*!/
-    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#01203d), to(#93c5ea));/!*谷歌*!/
-    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #01203d),color-stop(1, #93c5ea));/!* Safari & Chrome*!/
-    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#01203d', endColorstr='#93c5ea'); /!*IE6 & IE7*!/
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#01203d', endColorstr='#93c5ea')"; /!* IE8 *!/
-*/
-    background: #eee;
-    border-bottom: 2px solid black;
+    background:-moz-linear-gradient(top,#add8e6,#fefefe);
+    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
+    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
+    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
+    /*background: #eee;*/
+    /*border-bottom: 2px solid black;*/
 }
 .logo{
     height: 100%;
@@ -110,11 +110,15 @@ a{
     border-bottom: 1px dashed #ddd;
 }
 .blog-title{
+    display: table;
     font-size: 30px;
     /*font-weight: bolder;*/
+    min-width: 150px;
 }
 .blog-title:hover{
-    font-weight: bolder;
+    /*font-weight: bolder;*/
+    text-decoration-color: red;
+    text-decoration: underline;
 }
 .blog-brief{
     padding-top: 10px;
@@ -133,6 +137,11 @@ a{
     color: gainsboro;
     padding: 10px;
     font-size: 12px;
+}
+.hotblogs-container {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
 }
 .hotblogs-item{
     color: cornflowerblue;
