--- a/public/css/list.css
+++ b/public/css/list.css
@@ -29,9 +29,14 @@ body {
 }
 
 .topbar-container{
-    width: 100%;
+    /*width: 100%;*/
     background: #eee;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid #ddd;
+    background:-moz-linear-gradient(top,#add8e6,#fefefe);
+    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
+    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
+    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
 }
 .logo{
     float: left;
@@ -72,7 +77,7 @@ body {
     display: table;
     margin-left: auto;
     margin-right: auto;
-    max-width: 900px;
+    max-width: 1000px;
     width: 100%;
 }
 
@@ -85,11 +90,14 @@ body {
     border-bottom: 1px solid antiquewhite;
 }
 .blog-title{
+    display: table;
     font-size: 30px;
     /*font-weight: bolder;*/
+    min-width: 150px;
 }
 .blog-title:hover{
-    font-weight: bolder;
+    /*font-weight: bolder;*/
+    text-decoration: underline;
 }
 .blog-brief{
     padding-top: 10px;
