--- a/public/css/login.css
+++ b/public/css/login.css
@@ -39,9 +39,14 @@ a {
 
 .topbar-container {
     width: 100%;
-    background: #eee;
-    border-bottom: 2px solid black;
     height: 60px;
+    border-bottom: 1px solid #ddd;
+    background:-moz-linear-gradient(top,#add8e6,#fefefe);
+    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
+    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
+    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
+
 }
 
 .logo {
@@ -57,6 +62,7 @@ a {
     display: table;
     max-width: 300px;
     width: 100%;
+    padding: 10px;
 }
 
 .form-input {
