--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -12,59 +12,97 @@
 <body>
 <div>
     <div class="topbar-container">
-        <a href="/" ><img src="/img/logo.png" class="logo" ></a>
+        <a href="/"><img src="/img/logo.png" class="logo"></a>
+
         <div class="name">后台管理</div>
-        <a href="/blogs/publish"><div class="btn-new">+</div></a>
+        <a href="/blogs/publish">
+            <div class="btn-new">+</div>
+        </a>
+
         <div class="clearFloat"></div>
     </div>
-    <div class="seperator">数据库</div>
-    <div>
-        <input type="button" value="上传数据库" class="btn upload">
-        <input type="button" value="下载数据库" class="btn download">
-    </div>
-    <div class="seperator">标签</div>
-    <div>
-        <% for(var i in tags){ %>
-         <div class="tag-item">
-            <div class="tag-option">
-                <% if(i!=1){ %>
-                <span class="tag-option-item rename" onclick="renameTag(<%= i %>,'<%= tags[i] %>')">重命名</span>
-                <span class="tag-option-item delete" onclick="deleteTag(<%= i %>,'<%= tags[i] %>')">删除</span>
-                <% } %>
-            </div>
-            <div class="tag-name"><%= tags[i] %></div>
-         </div>
-        <% } %>
-        <div class="tag-item">
-            <div class="add-tag" onclick="addTag()">+</div>
+    <div class="content">
+        <div class="seperator">数据库</div>
+        <div>
+            <input type="button" value="上传数据库" class="btn upload">
+            <input type="button" value="下载数据库" class="btn download">
         </div>
-        <div class="clearFloat"></div>
+        <div class="seperator">标签</div>
+        <div>
+            <% for(var i in tags){ %>
+            <div class="tag-item">
+                <div class="tag-option">
+                    <% if(i!=1){ %>
+                    <span class="tag-option-item rename" onclick="renameTag(<%= i %>,'<%= tags[i] %>')">重命名</span>
+                    <span class="tag-option-item delete" onclick="deleteTag(<%= i %>,'<%= tags[i] %>')">删除</span>
+                    <% } %>
+                </div>
+                <div class="tag-name"><%= tags[i] %></div>
+            </div>
+            <% } %>
+            <div class="tag-item">
+                <div class="add-tag" onclick="addTag()">+</div>
+            </div>
+            <div class="clearFloat"></div>
+        </div>
+        <div class="seperator">未回复评论</div>
+        <div class="comment-container"></div>
+        <div class="more-blogs-container"><div class="btn-more">点击加载更多</div></div>
     </div>
 </div>
 <div id="console"></div>
+<div id="comment-details">
+    <div class="comment-details-bg"></div>
+    <div id="comment-main-container"></div>
+</div>
 </div>
 
 <style>
-    #dialog{
+    #dialog {
         display: none;
     }
-    .dialog-bg{
+
+    .dialog-bg {
         filter: alpha(opacity=50);
-        -moz-opacity:0.5;
+        -moz-opacity: 0.5;
         opacity: 0.5;
-        position: fixed;background:black;top: 0;left: 0;width: 100%;height: 100%;
+        position: fixed;
+        background: black;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
-    .dialog-container{
-        position: fixed;background:transparent;top: 0;left: 0;width: 100%;height: 100%;
+
+    .dialog-container {
+        position: fixed;
+        background: transparent;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
-    .dialog-body{
-        margin-top: 100px;margin-left:auto;margin-right:auto;display: table;color: black;text-align: center
+
+    .dialog-body {
+        margin-top: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        display: table;
+        color: black;
+        text-align: center
     }
-    .dialog-content{
+
+    .dialog-content {
         padding-top: 20px;
-        background: white;width: 300px;height: 120px;font-size: 20px;font-weight: bold;border-bottom: 2px solid #ddd;
+        background: white;
+        width: 300px;
+        height: 120px;
+        font-size: 20px;
+        font-weight: bold;
+        border-bottom: 2px solid #ddd;
     }
-    .input-tag{
+
+    .input-tag {
         font-size: 20px;
         padding-left: 5px;
         margin-top: 5px;
@@ -73,17 +111,24 @@
         height: 40px;
         line-height: 40px;
     }
-    .dialog-btn-container{
-        display: table;line-height: 40px
+
+    .dialog-btn-container {
+        display: table;
+        line-height: 40px
     }
-    .dialog-btn{
+
+    .dialog-btn {
         float: left;
         border: 0;
         padding: 0;
         margin: 0;
-        background: cornflowerblue;width: 150px;height: 40px;font-size: 20px;
+        background: cornflowerblue;
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
     }
-    .dialog-btn:hover{
+
+    .dialog-btn:hover {
         background: deepskyblue;
         cursor: pointer;
     }
