--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -69,6 +69,9 @@
                 <% }else{ %>
                 <textarea class="textarea"></textarea>
                 <% } %>
+            <div class="upload-img" id="container">
+                <span id="pickfiles">+</span>
+            </div>
         </div>
         <div class="resize-border"></div>
         <div id="preview-container" class="preview-container">
@@ -142,5 +145,8 @@
 
 
 </div>
+<script type="text/javascript" src="/js/plupload.full.min.js"></script>
+<script type="text/javascript" src="/js/zh_CN.js"></script>
+<script type="text/javascript" src="/js/qiniu.js"></script>
 </body>
 </html>
