--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,7 +30,7 @@ a{
 .top-container{
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     /*background: url("/img/bg.jpg");*/
     background:-moz-linear-gradient(top,#add8e6,#fefefe);
     background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
@@ -75,7 +75,7 @@ a{
 }
 .left{
     display: inline-block;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #eee;
 }
 .right{
     float: right;
@@ -107,7 +107,7 @@ a{
     padding: 30px;
     padding-left: 10px;
     padding-right:10px ;
-    border-bottom: 1px dashed #ddd;
+    border-bottom: 1px dashed #eee;
 }
 .blog-title{
     display: table;
