--- a/public/css/login.css
+++ b/public/css/login.css
@@ -40,7 +40,7 @@ a {
 .topbar-container {
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     background:-moz-linear-gradient(top,#add8e6,#fefefe);
     background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
     background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
