--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,36 +1,8 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    word-wrap: break-word;/*允许长单词换行到下一行：*/
-    /*word-break:break-all; /!*任意*!/*/
-}
 
-body {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    font-family: "Microsoft YaHei", Verdana, sans-serif, "SimSun";
-    overflow: hidden;
-}
-a{
-    color: black;
-    outline: none;
-    text-decoration: none;
-}
 .seperator{
     color: gainsboro;
     padding: 10px;
     font-size: 12px;
-}
-.clearFloat{
-    float: none;
-    clear: both;
 }
 .name {
     float: left;
@@ -43,13 +15,6 @@ a{
 .topbar-container{
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid #eee;
-    background:-moz-linear-gradient(top,#add8e6,#fefefe);
-    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
-    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
-    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
-
 }
 .logo{
     float: left;
@@ -65,10 +30,11 @@ a{
     line-height: 15px;
     margin-top: 38px;
     margin-right: 30px;
+    color: #666;
 }
 .btn-new:hover{
     cursor: pointer;
-    font-weight: bolder;
+    color: #000;
 }
 
 .btn{
