--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,86 +1,6 @@
-a{ color: #0645ad; text-decoration:none;}
-a:visited{ color: #0b0080; }
-a:hover{ color: #06e; }
-a:active{ color:#faa700; }
-a:focus{ outline: thin dotted; }
-a:hover, a:active{ outline: 0; }
-
-p{margin:0.3em 0;line-height: 20px;letter-spacing:1.5px}
-
-img{max-width:100%;}
-
-h1,h2,h3,h4,h5,h6{font-weight:normal;color:#111;line-height:1em;}
-h4,h5,h6{ font-weight: bold; }
-h1{ font-size:2.5em; }
-h2{ font-size:2em; border-bottom:1px solid silver; padding-bottom: 5px; }
-h3{ font-size:1.5em; }
-h4{ font-size:1.2em; }
-h5{ font-size:1em; }
-h6{ font-size:0.9em; }
-
-blockquote{color:#666666;margin:0;padding-left: 3em;border-left: 0.5em #EEE solid;}
-hr { display: block; height: 2px; border: 0; border-top: 1px solid #aaa;border-bottom: 1px solid #eee; margin: 1em 0; padding: 0; }
-
-pre{
-    line-height: 20px;
-    letter-spacing:1.5px
-}
-pre, code{
-    color: #000;
-    font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 0.94em; /* 0.94 = 0.88 + (1.00 - 0.88) / 2 */
-    border-radius:3px;
-    background-color: #F8F8F8;
-    border: 1px solid #CCC;
-}
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; padding: 5px;}
-pre code { border: 0px !important; background: transparent !important; line-height: 1.3em; }
-code { padding: 0 3px 0 3px; }
-sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
-ul, ol { margin: 1em 0; padding: 0 0 0 2em; }
-li p:last-child { margin:0 }
-dd { margin: 0 0 0 2em; }
-img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
-table { border-collapse: collapse; border-spacing: 0; }
-td, th { vertical-align: top; padding: 4px 10px; border: 1px solid #bbb; }
-tr:nth-child(even) td, tr:nth-child(even) th { background: #eee; }
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    word-wrap: break-word;/*允许长单词换行到下一行：*/
-    /*word-break:break-all; /!*任意*!/*/
-}
-
-body {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    font-family: "Microsoft YaHei", Verdana, sans-serif, "SimSun";
-}
-
-.clearFloat{
-    clear: both;
-}
-
 .topbar-container{
     width: 100%;
-   /* background: #eee;
-    border-bottom: 2px solid black;*/
-    border-bottom: 1px solid #eee;
-    background:-moz-linear-gradient(top,#add8e6,#fefefe);
-    background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
-    background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
-    filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe')";
+    height: 60px;
 }
 .logo{
     float: left;
@@ -99,10 +19,11 @@ body {
     width: 80px;
     height: 50%;
     color: white;
-    background: black;
+    background: #666;
     margin-right: 20px;
 }
 .btn-list:hover{
+    background: #000;
 }
 .btn-new{
     display: table;
@@ -111,11 +32,11 @@ body {
     line-height: 15px;
     margin-top: 38px;
     margin-right: 30px;
-    color: black;
+    color: #666;
 }
 .btn-new:hover{
     cursor: pointer;
-    font-weight: bolder;
+    color: #000;
 }
 
 .main-container{
