--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -5,13 +5,15 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>首页</title>
-    <link rel="stylesheet" href="/css/admin.css">
-    <script src="/js/jquery1.3.2.js"></script>
-    <script src="/js/admin.js"></script>
+    <style type="text/css">
+        <%- include ../../public/css/common.css%>
+        <%- include ../../public/css/dialog.css%>
+        <%- include ../../public/css/admin.css%>
+    </style>
 </head>
 <body>
 <div>
-    <div class="topbar-container">
+    <div class="topbar-container bg">
         <a href="/"><img src="/img/logo.png" class="logo"></a>
 
         <div class="name">后台管理</div>
@@ -57,82 +59,6 @@
 </div>
 </div>
 
-<style>
-    #dialog {
-        display: none;
-    }
-
-    .dialog-bg {
-        filter: alpha(opacity=50);
-        -moz-opacity: 0.5;
-        opacity: 0.5;
-        position: fixed;
-        background: black;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .dialog-container {
-        position: fixed;
-        background: transparent;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .dialog-body {
-        margin-top: 100px;
-        margin-left: auto;
-        margin-right: auto;
-        display: table;
-        color: black;
-        text-align: center
-    }
-
-    .dialog-content {
-        padding-top: 20px;
-        background: white;
-        width: 300px;
-        height: 120px;
-        font-size: 20px;
-        font-weight: bold;
-        border-bottom: 2px solid #ddd;
-    }
-
-    .input-tag {
-        font-size: 20px;
-        padding-left: 5px;
-        margin-top: 5px;
-        width: 80%;
-        border: 1px solid gray;
-        height: 40px;
-        line-height: 40px;
-    }
-
-    .dialog-btn-container {
-        display: table;
-        line-height: 40px
-    }
-
-    .dialog-btn {
-        float: left;
-        border: 0;
-        padding: 0;
-        margin: 0;
-        background: cornflowerblue;
-        width: 150px;
-        height: 40px;
-        font-size: 20px;
-    }
-
-    .dialog-btn:hover {
-        background: deepskyblue;
-        cursor: pointer;
-    }
-</style>
 <div id="dialog">
     <div class="dialog-bg"></div>
     <div class="dialog-container">
@@ -147,6 +73,10 @@
     </div>
 </div>
 
+<script src="/js/jquery1.3.2.js"></script>
+<script type="text/javascript">
+    <%- include ../../public/js/admin.js%>
+</script>
 
 </body>
 </html>
