--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -5,14 +5,18 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>文章</title>
-    <link rel="stylesheet" href="/css/blog.css">
-    <script src="/js/jquery1.3.2.js"></script>
-    <script src="/js/blog.js"></script>
+    <style type="text/css">
+        <%- include ../../public/css/common.css%>
+        <%- include ../../public/css/markdown.css%>
+        <%- include ../../public/css/dialog.css%>
+        <%- include ../../public/css/blog.css%>
+    </style>
+
 </head>
 <body>
 <div>
     <div id="blog" style="display:none"><%= id %></div>
-    <div class="topbar-container">
+    <div class="topbar-container bg">
         <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
         <a href="/blogs?tag=<%= tag %>"><div class="btn-list">文章</div></a>
         <% if(isLogined){ %>
@@ -55,42 +59,6 @@
 
     </div>
 
-<style>
-    #dialog{
-        display: none;
-    }
-    .dialog-bg{
-        filter: alpha(opacity=50);
-        -moz-opacity:0.5;
-        opacity: 0.5;
-        position: fixed;background:black;
-        top: 0;left: 0;width: 100%;height: 100%;
-    }
-    .dialog-container{
-        position: fixed;background:transparent;top: 0;left: 0;width: 100%;height: 100%;
-    }
-    .dialog-body{
-        margin-top: 100px;margin-left:auto;margin-right:auto;display: table;color: black;text-align: center
-    }
-    .dialog-content{
-        padding-top: 50px;
-        background: white;width: 300px;height: 120px;font-size: 24px;font-weight: bold;border-bottom: 2px solid #ddd;
-    }
-    .dialog-btn-container{
-        display: table;line-height: 40px
-    }
-    .dialog-btn{
-        float: left;
-        background: cornflowerblue;
-        width: 150px;
-        height: 40px;
-        font-size: 20px;
-    }
-    .dialog-btn:hover{
-        background: deepskyblue;
-        cursor: pointer;
-    }
-</style>
 <div id="dialog">
     <div class="dialog-bg"></div>
     <div class="dialog-container">
@@ -105,5 +73,11 @@
 </div>
 
 </div>
+
+<script src="/js/jquery1.3.2.js"></script>
+<script type="text/javascript">
+    <%- include ../../public/js/blog.js%>
+</script>
+
 </body>
 </html>
