--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -6,10 +6,13 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>发布文章</title>
-    <link rel="stylesheet" href="/css/publish.css">
-    <script src="/js/jquery1.3.2.js"></script>
-    <script src="/js/publish.js"></script>
-    <script src="/js/markdown.js"></script>
+    <style type="text/css">
+        <%- include ../../public/css/common.css%>
+        <%- include ../../public/css/markdown.css%>
+        <%- include ../../public/css/dialog.css%>
+        <%- include ../../public/css/publish.css%>
+    </style>
+
 </head>
 <body>
 <div>
@@ -17,7 +20,7 @@
       <div id="blog" style="display:none"><%= id %></div>
      <% } %>
     <div class="topbar-container">
-        <div class="bar">
+        <div class="bg">
         <a href="/">
             <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
         </a>
@@ -83,50 +86,6 @@
         <div class="clearFloat"></div>
     </div>
 
-    <style>
-        #dialog{
-            display: none;
-        }
-        .dialog-bg{
-            filter: alpha(opacity=50);
-            -moz-opacity:0.5;
-            opacity: 0.5;
-            position: fixed;background:black;top: 0;left: 0;width: 100%;height: 100%;
-        }
-        .dialog-container{
-            position: fixed;background:transparent;top: 0;left: 0;width: 100%;height: 100%;
-        }
-        .dialog-body{
-            margin-top: 100px;margin-left:auto;margin-right:auto;display: table;color: black;text-align: center
-        }
-        .dialog-content{
-            padding-top: 25px;
-            background: white;width: 300px;height: 120px;font-size: 24px;font-weight: bold;border-bottom: 2px solid #ddd;
-        }
-        .input-tag{
-            font-size: 20px;
-            padding-left: 5px;
-            margin-top: 5px;
-            width: 80%;
-            border: 1px solid gray;
-            height: 40px;
-            line-height: 40px;
-        }
-        .dialog-btn-container{
-            display: table;line-height: 40px
-        }
-        .dialog-btn{
-            float: left;
-            border: 0;
-            padding: 0;
-            margin: 0;
-            background: cornflowerblue;width: 150px;height: 40px;font-size: 20px;
-        }
-        .dialog-btn:hover{
-            background: deepskyblue;
-            cursor: pointer;
-        }
-    </style>
     <div id="dialog">
         <div class="dialog-bg"></div>
         <div class="dialog-container">
@@ -145,8 +104,13 @@
 
 
 </div>
+<script src="/js/jquery1.3.2.js"></script>
+<script src="/js/markdown.js"></script>
 <script type="text/javascript" src="/js/plupload.full.min.js"></script>
 <script type="text/javascript" src="/js/zh_CN.js"></script>
 <script type="text/javascript" src="/js/qiniu.js"></script>
+<script type="text/javascript">
+    <%- include ../../public/js/publish.js%>
+</script>
 </body>
 </html>
