--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -17,6 +17,10 @@
         <sapn>选择文件</sapn>
     </a>
     </div>
+
+    <%= html %>
+    <br>
+    <%- html %>
 </div>
 
 <script type="text/javascript" src="/js/jquery1.3.2.js"></script>
