--- a/public/css/publish.css
+++ b/public/css/publish.css
@@ -74,7 +74,7 @@
     background: transparent;
     font-size: 24px;
     font-weight: bolder;
-    padding-left: 20px;
+    padding-left: 5px;
 }
 
 .tag-container{
@@ -96,16 +96,17 @@
 }
 .inupt-container {
     float: left;
-    height: 100%;
+    height: 100px;
     background: whitesmoke;
     border: none;
 }
 .upload-img{
-    padding-left: 6px;
-    padding-right: 6px;
+    cursor: pointer;
+    padding-left: 7px;
+    padding-right: 7px;
     line-height: 30px;
     position: relative;
-    top: -100%;
+    top: -101%;
     float: right;
     font-size: 18px;
     font-weight: bolder;
@@ -153,11 +154,16 @@
     background: transparent;
 }
 .btn-preview{
+    cursor: pointer;
     filter: alpha(opacity=80);
     -moz-opacity:0.8;
     opacity: 0.8;
-    position: relative;width: 30px;height: 30px;background: cornflowerblue;top:0%;
-    line-height: 30px;
+    position: relative;
+    width: 27px;
+    height: 27px;
+    background: cornflowerblue;
+    top:0%;
+    line-height: 26px;
     text-align: center;
     font-weight: bolder;
 }
