--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>发布文章</title>
+    <link rel="stylesheet" href="/css/highlight/github.css">
     <style type="text/css">
         <%- include ../../public/css/common.css%>
         <%- include ../../public/css/markdown.css%>
@@ -104,11 +105,17 @@
 
 
 </div>
+
 <script src="/js/jquery1.3.2.js"></script>
-<script src="/js/markdown.js"></script>
 <script type="text/javascript" src="/js/plupload.full.min.js"></script>
 <script type="text/javascript" src="/js/zh_CN.js"></script>
 <script type="text/javascript" src="/js/qiniu.js"></script>
+
+<script src="/js/highlight/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script src="/js/marked.js"></script>
+
+<!--<script src="/js/markdown.js"></script>-->
 <script type="text/javascript">
     <%- include ../../public/js/publish.js%>
 </script>
