文章页面增加了关键和页面描述。美化了页面。

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -73,7 +73,7 @@
     </div>
 </div>
 
-<script src="/js/jquery1.3.2.js"></script>
+<script src="/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/admin.js%>
 </script>
