--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -27,7 +27,7 @@
 
 </div>
 
-<script src="/js/jquery1.3.2.js"></script>
+<script src="/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/login.js%>
 </script>
