--- a/views/blogs/list.ejs
+++ b/views/blogs/list.ejs
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<script src="/js/jquery1.3.2.js"></script>
+<script src="/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/list.js%>
 </script>
