--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@ return v.year+"-"+v.month+"-"+v.date+" "+ v.hour+":"+ v.minute+":"+ v.second;
 
 </div>
 
-<script src="/js/jquery1.3.2.js"></script>
+<script src="/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../public/js/index.js%>
 </script>
