--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -106,18 +106,15 @@
 
 </div>
 
-<script src="/js/jquery1.3.2.js"></script>
-<script type="text/javascript" src="/js/plupload.full.min.js"></script>
-<script type="text/javascript" src="/js/zh_CN.js"></script>
-<script type="text/javascript" src="/js/qiniu.js"></script>
-
-<script src="/js/highlight/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-<script src="/js/marked.js"></script>
-
-<!--<script src="/js/markdown.js"></script>-->
+<script src="/js/external/jquery1.3.2.js"></script>
+<script type="text/javascript" src="/js/upload/plupload.full.min.js"></script>
+<script type="text/javascript" src="/js/upload/zh_CN.js"></script>
+<script type="text/javascript" src="/js/upload/qiniu.js"></script>
+<script src="/js/external/highlight.pack.js"></script>
+<script src="/js/external/marked.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/publish.js%>
 </script>
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
