--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -23,10 +23,10 @@
     <%- html %>
 </div>
 
-<script type="text/javascript" src="/js/jquery1.3.2.js"></script>
-<script type="text/javascript" src="/js/plupload.full.min.js"></script>
-<script type="text/javascript" src="/js/zh_CN.js"></script>
-<script type="text/javascript" src="/js/qiniu.js"></script>
+<script type="text/javascript" src="/js/external/jquery1.3.2.js"></script>
+<script type="text/javascript" src="/js/upload/plupload.full.min.js"></script>
+<script type="text/javascript" src="/js/upload/zh_CN.js"></script>
+<script type="text/javascript" src="/js/upload/qiniu.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
